crates/aranya-policy-compiler/tests/data/structs/field_collision_already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `x` is defined multiple times
  |
2 |     x int,
  |     - previous defintion here
3 |     x int
  |     ^ re-defined here
